--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <nav class="header_menu">
             <a href="encriptador.html">
-                <img src="../img/Logo.png" class="logo">
+                <img src="img/Logo.png" class="logo">
             </a>
         </nav>
     </header>
