--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <nav class="header_menu">
-            <a href="encriptador.html">
+            <a href="index.html">
                 <img class="logo" src="/img/Logo.png">
             </a>
         </nav>
