--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <nav class="header_menu">
-                <img class="logo" src="/img/Logo.png">
+                <img src="img/Logo.png">
         </nav>
     </header>
 
